# paladynee.github.io

./: README.md  index.html  index.js  script.js  styles.css  web.html
asteroid_miner/: classes.js  draw.js  events.js  functions.js  index.html  init.js  styles.css  variables.js
game/: classes.js  helpers.js  index.html  script.js
hashnet/: classes.js  helpers.js  index.html  perf.js  script.js  styles.css
hashnet_rustified/: Cargo.toml  draw.js  helpers.js  index.html  init.js  main.js  styles.css
hashnet_rustified/.cargo/: config.toml
hashnet_rustified/pkg/: hashnet_lib.d.ts  hashnet_lib.js  hashnet_lib_bg.wasm  hashnet_lib_bg.wasm.d.ts  package.json
hashnet_rustified/src/: helpers.rs  lib.rs  vec2.rs
hashnet_vecinplace/: classes.js  helpers.js  index.html  perf.js  script.js  styles.css
hashnet_wasmgl/: Cargo.toml  build  start_miniserve  stop_miniserve
hashnet_wasmgl/.cargo/: config.toml
hashnet_wasmgl/.github/: copilot-instructions.md
hashnet_wasmgl/pub/: hashnet_wasmgl.wasm  index.html
hashnet_wasmgl/pub/js/: events.js  get_wasm.js  main.js  printf.js  shared_comm_buf.js  webgl.js  worker_logic.js
hashnet_wasmgl/src/: exports.rs  lib.rs
hashnet_wasmgl/src/imp/: mod.rs
hashnet_wasmgl/src/imp/api/: imports.rs  mod.rs  symbols.rs
hashnet_wasmgl/src/imp/api/symbols/: get_amount_objects.rs  get_color_pointers.rs  get_draw_pointers.rs  get_mouse_pos.rs  handle_continuous_controls.rs  init_lib.rs  reset_palette.rs  tactile_keyboard_event.rs  update_canvas_size.rs  update_keys.rs  update_mouse_buttons.rs  update_mouse_pos.rs  update_physics.rs
hashnet_wasmgl/src/imp/core/: global_state.rs  mod.rs  properties.rs
hashnet_wasmgl/src/imp/engine/: input.rs  mod.rs  objects.rs  physics.rs  simd_math.rs
hashnet_wasmgl/src/imp/engine/input/: circle_around_mouse.rs  collect_nodes.rs  continuous.rs  converge.rs  handle_mouse_left_click.rs  handle_mouse_right_click.rs  handle_orbit.rs  held_keys.rs  mouse_in_center.rs  nudge.rs  random_explosion.rs  stop.rs  tactile.rs  vim_controls.rs
hashnet_wasmgl/src/imp/math/: color.rs  hashablefloat.rs  mod.rs  random.rs  vec2.rs
hashnet_wasmgl/src/imp/wasm/: allocator.rs  mod.rs  panic.rs
incremental/: index.html  script.js  styles.css
modular_fizz/: fizzbuzz.js  index.html  styles.css
statgrinder/: config.js  currencies.js  dom.js  index.html  logic.js  player.js  scripts.js  stdout.js  styles.css  toasts.js  upgrade.js
statgrinder/commands/: clear.js  drink.js  grind.js  hard_reset.js  help.js  history.js  save.js  set.js  type.js  upgrade.js
webgl/: gl-matrix-min.js  index.html  script.js  styles.css
